# snarkops

./: .gitignore  Cargo.toml  README.md
sdk_ts/: index.ts
snops-web/: Cargo.toml  README.md
snops-web/migrations/20250613120000_create_tables/: down.sql  up.sql
snops-web/migrations/20250613120001_seed_data/: down.sql  up.sql
snops-web/src/: db.rs  main.rs  models.rs  schema.rs
snops-web/src/routes/: mod.rs  users.rs
web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  controlPlane.tsx  global.css  main.tsx
web/src/components/: ControlPlaneConsole.tsx  EnvironmentsPanel.tsx  JsonTable.css  JsonTable.tsx  JsonTree.tsx
web/src/pages/: AgentInfoPage.tsx  AgentsPage.tsx  Dashboard.tsx  EnvInfoPage.tsx  EnvsPage.tsx
